# vulkan-test

./: .gitignore  CMakeLists.txt  readme.md  run.sh
scripts/: build.conditional.sh  build.sh  run.sh
src/: main.cpp
src/init/: debug.cpp  debug.h
